--- a/HrPortalV2.Web/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_Layout.cshtml
@@ -42,6 +42,11 @@ License: You must have a valid license purchased only from themeforest(the above
     <link href="/css/custom.css" rel="stylesheet" type="text/css" />
     <!-- END THEME LAYOUT STYLES -->
     <link rel="shortcut icon" href="favicon.ico" />
+    <style>
+        .ck-content {
+            height: 400px;
+        }
+    </style>
 </head>
 <!-- END HEAD -->
 <body class="page-container-bg-solid">
