--- a/HrPortalV2.Web/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <link href="/assets/layouts/layout3/css/themes/default.min.css" rel="stylesheet" type="text/css" id="style_color" />
     <link href="/css/custom.css" rel="stylesheet" type="text/css" />
     <!-- END THEME LAYOUT STYLES -->
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <style>
         .ck-content {
             height: 400px;
