resume create edit

--- a/HrPortalV2.Web/Views/Resumes/Index.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Index.cshtml
@@ -104,6 +104,7 @@
             </td>
            
             <td>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success">Düzenle</a>
                 <a asp-action="Create" asp-controller="Messages" asp-route-id="@item.Id">Mesaj Gönder</a> |
             </td>
         </tr>
