--- a/HrPortalV2.Web/Views/Home/Index.cshtml
+++ b/HrPortalV2.Web/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-lg-8">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Örn: Yazılım, sistem, tasarım...">
+                    <input type="text" class="form-control" placeholder="İş İlanı Ara, Örn: Yazılım, sistem, tasarım...">
                     <span class="input-group-btn">
                         <button class="btn green-soft uppercase bold" type="button">Ara</button>
                     </span>
@@ -35,6 +35,7 @@
         </div>
     </div>
     <div class="search-table table-responsive">
+        <h3 style="text-align:center">Öne Çıkan İş İlanları</h3>
         <table class="table table-bordered table-striped table-condensed">
             <thead class="bg-blue">
                 <tr>
