--- a/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
@@ -121,7 +121,7 @@
                     </li>
 
                     <li>
-                        <a asp-area="" asp-controller="Messages" asp-action="Index">
+                        <a asp-area="" asp-controller="Messages" asp-action="MyMessages">
                             <i class="icon-envelope-open"></i> Mesajlarım
                             <span class="badge badge-danger"> 3 </span>
                         </a>
