--- a/HrPortalV2.Web/Views/Home/Index.cshtml
+++ b/HrPortalV2.Web/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="col-md-12">
             <h1>Kariyerine bir + daha</h1>
             <h2>Aradığınız işi dakikalar içinde bulun</h2>
-            <button type="button" class="btn btn-danger">Özgeçmişinizi Şimdi Oluşturun</button>
+            <a asp-action="Create" asp-controller="Resumes" class="btn btn-danger">Özgeçmişinizi Şimdi Oluşturun</a>
         </div>
     </div>
 }
