--- a/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
@@ -121,33 +121,39 @@
                     </li>
 
                     <li>
-                        <a asp-area="" asp-controller="Messages" asp-action="MyMessages">
-                            <i class="icon-envelope-open"></i> Mesajlarım
+                        <a asp-area="" asp-controller="Messages" asp-action="MyMessagesSentToMyCompanies">
+                            <i class="icon-envelope-open"></i> Mesajlarım (Firma için)
+                            <span class="badge badge-danger"> 3 </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-area="" asp-controller="Messages" asp-action="MyMessagesSentToMyResumes">
+                            <i class="icon-envelope-open"></i> Mesajlarım (Aday için)
                             <span class="badge badge-danger"> 3 </span>
                         </a>
                     </li>
                     <li>
                         <a asp-area="" asp-controller="Resumes" asp-action="MyResumes">
                             <i class="icon-envelope-open"></i> Özgeçmişlerim
-                            
+
                         </a>
                     </li>
                     <li>
                         <a asp-area="" asp-controller="JobApplications" asp-action="MyJobApplications">
                             <i class="icon-envelope-open"></i> Başvurularım
-                            
+
                         </a>
                     </li>
                     <li>
                         <a asp-area="" asp-controller="Jobs" asp-action="MyJobs">
                             <i class="icon-envelope-open"></i> İş İlanlarım
-                            
+
                         </a>
                     </li>
                     <li>
                         <a asp-area="" asp-controller="Companies" asp-action="MyCompanies">
                             <i class="icon-envelope-open"></i> Firmalarım
-                            
+
                         </a>
                     </li>
                     <li>
