--- a/HrPortalV2.Web/Views/Messages/MyMessagesSentToMyResumes.cshtml
+++ b/HrPortalV2.Web/Views/Messages/MyMessagesSentToMyResumes.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<HrPortalV2.Models.Message>
 
 @{
-    ViewData["Title"] = "Mesajlarım";
+    ViewData["Title"] = "Gelen Mesajlarım";
 }
 
 
