--- a/HrPortalV2.Web/Views/Resumes/Create.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Create.cshtml
@@ -142,11 +142,9 @@
 
 
             <input asp-for="IPAddress" type="hidden" />
-
-            <div class="form-group">
-                <input type="submit" value="Kaydet" class="btn btn-success" /><a asp-action="Index" class="btn btn-danger">İptal</a>
-            </div>
-
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Kaydet" class="btn btn-success btn-sm" /><a asp-action="Index" class="btn btn-danger btn-sm">İptal</a>
         </div>
     </div>
 </form>
