JobsController Jobs View Edited

--- a/HrPortalV2.Web/Views/Jobs/Create.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/Create.cshtml
@@ -55,7 +55,7 @@
             <input asp-for="UpdatedBy" type="hidden" />
             <input asp-for="IPAddress" type="hidden" />
             <div class="form-group">
-                <input type="submit" value="Kaydet" class="btn btn-success btn-sm" />  <a asp-action="Index" class="btn btn-warning btn-sm">Geri Dön</a>
+                <input type="submit" value="Kaydet" class="btn btn-success btn-sm" />  <a asp-action="Index" asp-controller="Jobs" asp-area="" class="btn btn-warning btn-sm">Geri Dön</a>
             </div>
         </form>
     </div>
