--- a/HrPortalV2.Web/Views/Jobs/Details.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/Details.cshtml
@@ -1,10 +1,11 @@
 ﻿@model HrPortalV2.Models.Job
 
 @{
-    ViewData["Title"] = "İş İlanı Sil";
+    ViewData["Title"] = "İlan Detayı";
 }
 
-<h2>Bu İş İlanını Silmek İstediğinizden Eminmisiniz ?</h2>
+
+
 <div>
     <h4>İş İlanı</h4>
     <hr />
@@ -58,34 +59,14 @@
             @Html.DisplayFor(model => model.CreateDate)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.UpdateDate)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.UpdateDate)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdatedBy)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.UpdatedBy)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IPAddress)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IPAddress)
-        </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Sil" class="btn btn-danger btn-sm" /> |
-        <a asp-action="Index" asp-controller="Jobs" asp-area="">Geri Dön</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Apply" asp-route-id="@Model.Id" asp-controller="Jobs" asp-area="" class="btn btn-warning btn-sm">Başvur</a> 
+    <a asp-action="Index" asp-controller="Jobs" asp-area="">Geri Dön</a>
 </div>
