--- a/HrPortalV2.Web/Views/Jobs/MyJobs.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/MyJobs.cshtml
@@ -5,7 +5,7 @@
     }
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
     <p>
-        <a asp-action="Create" class="btn btn-primary btn-sm">Yeni İş İlanı</a>
+        <a asp-action="Create" asp-controller="Jobs" asp-area="" class="btn btn-primary btn-sm">Yeni İş İlanı</a>
     </p>
     <table id="myTable" class="table">
         <thead>
@@ -30,7 +30,7 @@
                     @Html.DisplayFor(modelItem => item.Company.Name)
                 </td>
                 <td>
-                    <a asp-action="Apply" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Başvuru Yap</a> 
+                    <a asp-action="Apply" asp-route-id="@item.Id" asp-controller="Jobs" asp-area="" class="btn btn-primary btn-sm">Başvuru Yap</a> 
                 </td>
             </tr>
             }
