--- a/HrPortalV2.Web/Views/Companies/MyCompanies.cshtml
+++ b/HrPortalV2.Web/Views/Companies/MyCompanies.cshtml
@@ -67,10 +67,10 @@
             </td>
 
             <td class="text-nowrap">
-                
-
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-success"><i class="fa fa-edit"></i> Düzenle</a>
-                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> Sil</a>
+                <a asp-action="Details" asp-controller="Companies" asp-area="" asp-route-Id="@item.Id" class="btn btn-default btn-sm">Firma Detayı</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm"><i class="fa fa-edit"></i> Düzenle</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i> Sil</a>
+                <a asp-action="Details" asp-controller="JopApplications" asp-area="" asp-route-Id="@item.Id" class="btn btn-default btn-sm">Başvuranlar</a>
 
             </td>
         </tr>
