--- a/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
@@ -157,7 +157,7 @@
                         </a>
                     </li>
                     <li>
-                        <a asp-area="" asp-controller="JobApplications" asp-action="MyApplicants">
+                        <a asp-area="" asp-controller="JobApplications" asp-action="MyJobApplicants">
                             <i class="icon-envelope-open"></i> Başvuranlar
                             <span class="badge badge-danger"> 3 </span>
                         </a>
