--- a/HrPortalV2.Web/Views/Resumes/MyResumes.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/MyResumes.cshtml
@@ -106,9 +106,9 @@
                     @Html.DisplayFor(modelItem => item.Occupation.Name)
                 </td>
                 <td class="text-nowrap">
-                
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm"><i class="fa fa-edit"></i> Düzenle</a> <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i> Sil</a>
-                    
+
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm"><i class="fa fa-edit"></i> Düzenle</a> <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i> Sil</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-success btn-sm"><i class="fa fa-edit"></i> Detaylar</a>
                 </td>
 
             </tr>
