--- a/HrPortalV2.Web/Views/Companies/Details.cshtml
+++ b/HrPortalV2.Web/Views/Companies/Details.cshtml
@@ -11,7 +11,7 @@
                 <div class="blog-single-content bordered blog-container">
                     <div class="blog-single-head">
                         <h1 class="blog-single-head-title">@Model.Name</h1>
-                        
+
                     </div>
 
                     <div class="blog-single-desc">
@@ -19,7 +19,7 @@
                         @Html.Raw(Model.Description)
 
                     </div>
-               
+
                     <div class="blog-comments">
                         <h3 class="sbold blog-comments-title">Firmanın İş İlanları</h3>
                         <table id="myTable" class="table">
@@ -28,7 +28,7 @@
                                     <th>
                                         İlan Başlığı
                                     </th>
-                                    
+
                                     <th></th>
                                 </tr>
                             </thead>
@@ -39,7 +39,7 @@
                                         <td>
                                             @Html.DisplayFor(modelItem => item.Title)
                                         </td>
-                                       
+
                                         <td>
                                             <a asp-action="Apply" asp-route-id="@item.Id" asp-controller="Jobs" asp-area="" class="btn btn-primary btn-sm">Başvuru Yap</a>
                                         </td>
@@ -48,108 +48,34 @@
                             </tbody>
                         </table>
 
-                            
+
                     </div>
-                       
-                    </div>
-               
+
+                </div>
+
             </div>
             <div class="col-lg-3">
                 <div class="blog-single-sidebar bordered blog-container">
-                    <div class="blog-single-sidebar-search">
-                        <div class="input-icon right">
-                            <i class="icon-magnifier"></i>
-                            <input type="text" class="form-control" placeholder="Search Blog">
-                        </div>
+                    <div>
+                        <h4>İlan Detayları</h4>
                     </div>
+                    <hr />
                     <div class="blog-single-sidebar-recent">
-                        <h3 class="blog-sidebar-title uppercase">Oluşturulma Tarihi</h3>
-                        @Model.CreateDate
+                        <p>
+                            <strong>Yayınlanma Tarihi:</strong><br />@string.Format("{0:dd.MM.yyyy}", Model.CreateDate)
+                        </p>
+                        <p>
+                            <strong>Yayın Bitiş Tarihi:</strong><br />@string.Format("{0:dd.MM.yyyy}", Model.UpdateDate)
+                        </p>
+                        <p>
+                            <strong>Oluşturulma Tarihi:</strong><br />@string.Format("{0:dd.MM.yyyy}", Model.CreateDate)
+                        </p>
+                        >
+
                     </div>
-                    <div class="blog-single-sidebar-tags">
-                        <h3 class="blog-sidebar-title uppercase">Tags</h3>
-                        <ul class="blog-post-tags">
-                            <li class="uppercase">
-                                <a href="javascript:;">Bootstrap</a>
-                            </li>
-                            <li class="uppercase">
-                                <a href="javascript:;">Sass</a>
-                            </li>
-                            <li class="uppercase">
-                                <a href="javascript:;">HTML</a>
-                            </li>
-                            <li class="uppercase">
-                                <a href="javascript:;">CSS</a>
-                            </li>
-                            <li class="uppercase">
-                                <a href="javascript:;">Gulp</a>
-                            </li>
-                            <li class="uppercase">
-                                <a href="javascript:;">Framework</a>
-                            </li>
-                            <li class="uppercase">
-                                <a href="javascript:;">Admin Theme</a>
-                            </li>
-                            <li class="uppercase">
-                                <a href="javascript:;">UI Features</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="blog-single-sidebar-links">
-                        <h3 class="blog-sidebar-title uppercase">Useful Links</h3>
-                        <ul>
-                            <li>
-                                <a href="javascript:;">Lorem Ipsum </a>
-                            </li>
-                            <li>
-                                <a href="javascript:;">Dolore Amet</a>
-                            </li>
-                            <li>
-                                <a href="javascript:;">Metronic Database</a>
-                            </li>
-                            <li>
-                                <a href="javascript:;">UI Features</a>
-                            </li>
-                            <li>
-                                <a href="javascript:;">Advanced Forms</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="blog-single-sidebar-ui">
-                        <h3 class="blog-sidebar-title uppercase">UI Examples</h3>
-                        <div class="row ui-margin">
-                            <div class="col-xs-4 ui-padding">
-                                <a href="javascript:;">
-                                    <img src="../assets/pages/img/background/1.jpg" />
-                                </a>
-                            </div>
-                            <div class="col-xs-4 ui-padding">
-                                <a href="javascript:;">
-                                    <img src="../assets/pages/img/background/37.jpg" />
-                                </a>
-                            </div>
-                            <div class="col-xs-4 ui-padding">
-                                <a href="javascript:;">
-                                    <img src="../assets/pages/img/background/57.jpg" />
-                                </a>
-                            </div>
-                            <div class="col-xs-4 ui-padding">
-                                <a href="javascript:;">
-                                    <img src="../assets/pages/img/background/53.jpg" />
-                                </a>
-                            </div>
-                            <div class="col-xs-4 ui-padding">
-                                <a href="javascript:;">
-                                    <img src="../assets/pages/img/background/59.jpg" />
-                                </a>
-                            </div>
-                            <div class="col-xs-4 ui-padding">
-                                <a href="javascript:;">
-                                    <img src="../assets/pages/img/background/42.jpg" />
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+
+
+
                 </div>
             </div>
         </div>
