--- a/HrPortalV2.Web/Views/Resumes/Details.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Details.cshtml
@@ -64,8 +64,102 @@
                                     </ul>
                                     <div class="row">
                                         <div class="col-md-12">
-                                            <label asp-for="FirstName" class="control-label"></label><br />
-                                            <text>@Html.DisplayFor(model=>model.FirstName)</text>
+                                            <table class="table table-striped table-bordered table-advance table-hover">
+                                                <tr>
+                                                    <th class="text-nowrap all">
+                                                        <label asp-for="FirstName" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap all">
+                                                        <label asp-for="LastName" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap all">
+                                                        <label asp-for="MobilePhone" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="Gender" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="MaritalStatus" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="Email" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="TotalExperience" class="control-label bold"></label>
+                                                    </th>
+                                                </tr>
+                                                <tr>
+                                                    <td><text>@Html.DisplayFor(model => model.FirstName)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.LastName)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.MobilePhone)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.Gender)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.MaritalStatus)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.Email)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.TotalExperience)</text></td>
+                                                </tr>
+                                            </table>
+                                        </div>
+                                        <div class="col-md-12">
+                                            <table class="table table-striped table-bordered table-advance table-hover">
+                                                <tr>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="IsCurrentlyWorking" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="IsSeekingJob" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="LastCompany" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="LastPosition" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="LastEducation" class="control-label bold"></label>
+                                                    </th>
+                                                </tr>
+                                                <tr>
+                                                    <td><text>@Html.DisplayFor(model => model.IsCurrentlyWorking)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.IsSeekingJob)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.LastCompany)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.LastPosition)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.LastEducation)</text></td>
+                                                    </tr>
+                                            </table>
+                                        </div>
+                                        <div class="col-md-12">
+                                            <table class="table table-striped table-bordered table-advance table-hover">
+                                                <tr>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="LastDepartment" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="GraduationYear" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="ForeignLanguages" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="IsApproved" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="IsActive" class="control-label bold"></label>
+                                                    </th>
+                                                    <th class="text-nowrap">
+                                                        <label asp-for="Occupation" class="control-label bold"></label>
+                                                    </th>
+
+                                                </tr>
+
+                                               <tr>
+                                                    <td><text>@Html.DisplayFor(model => model.LastDepartment)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.GraduationYear)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.ForeignLanguages)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.IsApproved)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.IsActive)</text></td>
+                                                    <td><text>@Html.DisplayFor(model => model.Occupation)</text></td>
+                                                </tr>
+                                            </table>
                                         </div>
                                     </div>
                                 </div>
@@ -122,6 +216,7 @@
                                                     <thead>
                                                         <tr>
                                                             <th>
+                                                                
                                                                 <i class="fa fa-briefcase"></i> Company
                                                             </th>
                                                             <th class="hidden-xs">
