--- a/HrPortalV2.Web/Views/Jobs/MyJobs.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/MyJobs.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<HrPortalV2.Models.Job>
 
     @{
-    ViewData["Title"] = "Tüm İş İlanları";
+    ViewData["Title"] = "İş İlanlarım";
     }
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
     <p>
