--- a/HrPortalV2.Web/Views/Companies/Index.cshtml
+++ b/HrPortalV2.Web/Views/Companies/Index.cshtml
@@ -51,7 +51,7 @@
 
                     <a asp-action="Details" asp-controller="Companies" asp-route-Id="@item.Id" class="btn btn-default btn-sm">Firma Detayı</a>
 
-                    <a asp-action="Create" asp-controller="Companies" asp-route-Id="@item.CreatedBy" class="btn btn-warning btn-sm"><i class="fa fa-envelope-o"></i>Mesaj Gönder</a>
+                    <a asp-action="Create" asp-controller="Messages" asp-route-Id="@item.CreatedBy" class="btn btn-warning btn-sm"><i class="fa fa-envelope-o"></i>Mesaj Gönder</a>
 
                 </div>
 
